--- a/404.html
+++ b/404.html
@@ -69,11 +69,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CmQ6-qO5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CqR83JGb.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BjOZCkOR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BXiOrQ4R.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.BedhUbme.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.C-WwkpB6.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BsoNaEHJ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.mCjY-gjT.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.COpIlTjV.js">
 </head>
 
@@ -81,15 +81,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_q7b0gi = {
+					__sveltekit_eiifwc = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CmQ6-qO5.js"),
-						import("/_app/immutable/entry/app.BsoNaEHJ.js")
+						import("/_app/immutable/entry/start.BjOZCkOR.js"),
+						import("/_app/immutable/entry/app.mCjY-gjT.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
