--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 	
 		<link href="./_app/immutable/assets/0.CtmaMITR.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DVS6dNU8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CmQ6-qO5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CqR83JGb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BjOZCkOR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BXiOrQ4R.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.BedhUbme.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C-WwkpB6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BsoNaEHJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.mCjY-gjT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.COpIlTjV.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DRiTQEYj.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Bia0Nrwv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.BgpHGp4E.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/theme.Bs4tdBlV.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.B6SVTh9t.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.B8i6YunA.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.D1PE8kXr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.AzdP5zTU.js">
 </head>
@@ -97,7 +97,7 @@
 			
 			<script>
 				{
-					__sveltekit_q7b0gi = {
+					__sveltekit_eiifwc = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -106,8 +106,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CmQ6-qO5.js"),
-						import("./_app/immutable/entry/app.BsoNaEHJ.js")
+						import("./_app/immutable/entry/start.BjOZCkOR.js"),
+						import("./_app/immutable/entry/app.mCjY-gjT.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
