--- a/404.html
+++ b/404.html
@@ -69,11 +69,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B_YYuYId.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.oobFnNpH.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Blh8j-_e.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BrSJ_wii.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.BedhUbme.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.C-WwkpB6.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CIE_XCpl.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.k6xxrH38.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.COpIlTjV.js">
 </head>
 
@@ -81,15 +81,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1rgzswg = {
+					__sveltekit_1kln7qu = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B_YYuYId.js"),
-						import("/_app/immutable/entry/app.CIE_XCpl.js")
+						import("/_app/immutable/entry/start.Blh8j-_e.js"),
+						import("/_app/immutable/entry/app.k6xxrH38.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
