--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	<meta name="format-detection" content="telephone=no">
 
 	<title>macyou</title>
-	<meta name="description" content="Mapagmataas' website" />
+	<meta name="description"
+		content="This is my personal resume website, showcasing my skills, experience, and projects. It serves as a digital portfolio, providing a platform for others to learn more about my work as a developer and the journey I’ve taken. The website highlights various aspects of my career, technical expertise, and creative endeavors." />
 	<meta name="keywords"
 		content="m, ma, mac, cyou, see, you, seeyou, c, u, cu, macyou, ma-cyou, ma.cyou, mapagmataas, mapagmatas, map, mapa, mapag, makak, makent" />
 	<meta name="author" content="Mapagmataas" />
@@ -31,8 +32,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="macyou" />
 	<meta property="og:description" content="Mapagmataas' website" />
-	<meta property="og:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=This+is+my+personal+resume+website%2C+it+serves+as+a+digital+portfolio.&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
+	<meta property="og:image" content="https://api.ma.cyou/og/" />
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta property="twitter:domain" content="ma.cyou" />
@@ -40,8 +40,7 @@
 	<meta name="twitter:title" content="macyou" />
 	<meta name="twitter:description" content="Mapagmataas' website" />
 	<meta name="twitter:alt" content="Twitter Image" />
-	<meta name="twitter:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=This+is+my+personal+resume+website%2C+it+serves+as+a+digital+portfolio.&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
+	<meta name="twitter:image" content="https://api.ma.cyou/og/" />
 
 	<script async>
 		(function () {
@@ -69,20 +68,20 @@
 	</script>
 
 	
-		<link href="./_app/immutable/assets/0.5pvDSbF9.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.DsTTDJuz.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DVS6dNU8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B9SLcnWp.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.4mn9KyYU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/utils.BedhUbme.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.C-WwkpB6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Cjt3JrzA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.COpIlTjV.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Bmx6aD-o.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/language.CAekHiVq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/theme.ByxC_bYy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.31Mxq6HL.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DqbbDAI_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.BdNkWqYv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CbUg0XfK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BbCU-u7i.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/utils.Dw_DQhde.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.BhbiQTaa.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BuZYBnM1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.FO89wGvZ.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CIhoRS3N.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/language.BmZbmXTA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/theme.B7CZyJia.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D-nhtcy3.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DriOCHat.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.Sj06YKL-.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -97,7 +96,7 @@
 			
 			<script>
 				{
-					__sveltekit_1cmhba1 = {
+					__sveltekit_1e44y8i = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -106,8 +105,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B9SLcnWp.js"),
-						import("./_app/immutable/entry/app.Cjt3JrzA.js")
+						import("./_app/immutable/entry/start.CbUg0XfK.js"),
+						import("./_app/immutable/entry/app.BuZYBnM1.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
