--- a/src/app.html
+++ b/src/app.html
@@ -19,7 +19,8 @@
 	<meta name="format-detection" content="telephone=no">
 
 	<title>macyou</title>
-	<meta name="description" content="Mapagmataas' website" />
+	<meta name="description"
+		content="This is my personal resume website, showcasing my skills, experience, and projects. It serves as a digital portfolio, providing a platform for others to learn more about my work as a developer and the journey I’ve taken. The website highlights various aspects of my career, technical expertise, and creative endeavors." />
 	<meta name="keywords"
 		content="m, ma, mac, cyou, see, you, seeyou, c, u, cu, macyou, ma-cyou, ma.cyou, mapagmataas, mapagmatas, map, mapa, mapag, makak, makent" />
 	<meta name="author" content="Mapagmataas" />
@@ -31,8 +32,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="macyou" />
 	<meta property="og:description" content="Mapagmataas' website" />
-	<meta property="og:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=This+is+my+personal+resume+website%2C+it+serves+as+a+digital+portfolio.&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
+	<meta property="og:image" content="https://api.ma.cyou/og/" />
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta property="twitter:domain" content="ma.cyou" />
@@ -40,8 +40,7 @@
 	<meta name="twitter:title" content="macyou" />
 	<meta name="twitter:description" content="Mapagmataas' website" />
 	<meta name="twitter:alt" content="Twitter Image" />
-	<meta name="twitter:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=This+is+my+personal+resume+website%2C+it+serves+as+a+digital+portfolio.&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
+	<meta name="twitter:image" content="https://api.ma.cyou/og/" />
 
 	<script async>
 		(function () {
