--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 	
 		<link href="./_app/immutable/assets/0.DsTTDJuz.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DVS6dNU8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Br9YX4A3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.GLEr0QT7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CfIP6grD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C8T_CRI5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.Dw_DQhde.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BhbiQTaa.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CqqmzHKp.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BSyNQuKK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.FO89wGvZ.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.yvw-g_kb.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.5GG6U-xN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.BmZbmXTA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/theme.B7CZyJia.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DrmazFwA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D6tHbjlr.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.DriOCHat.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Sj06YKL-.js">
 </head>
@@ -96,7 +96,7 @@
 			
 			<script>
 				{
-					__sveltekit_d78d0x = {
+					__sveltekit_1yrd7au = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -105,8 +105,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Br9YX4A3.js"),
-						import("./_app/immutable/entry/app.CqqmzHKp.js")
+						import("./_app/immutable/entry/start.CfIP6grD.js"),
+						import("./_app/immutable/entry/app.BSyNQuKK.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
