--- a/404.html
+++ b/404.html
@@ -68,11 +68,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CfIP6grD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.C8T_CRI5.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BAMWE86m.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.ECcutlCZ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.Dw_DQhde.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BhbiQTaa.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BSyNQuKK.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CTiwhXq2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.FO89wGvZ.js">
 </head>
 
@@ -80,15 +80,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1yrd7au = {
+					__sveltekit_147foz7 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CfIP6grD.js"),
-						import("/_app/immutable/entry/app.BSyNQuKK.js")
+						import("/_app/immutable/entry/start.BAMWE86m.js"),
+						import("/_app/immutable/entry/app.CTiwhXq2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
