--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 	
 		<link href="./_app/immutable/assets/0.DsTTDJuz.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DVS6dNU8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BAMWE86m.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ECcutlCZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.R-cnhXdM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DolK5Jl_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.Dw_DQhde.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BhbiQTaa.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CTiwhXq2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DeGAMEXL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.FO89wGvZ.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B_NBKGtg.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CT_y19XA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.BmZbmXTA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/theme.B7CZyJia.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.HAD0YXAp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D9jAXbpr.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.DriOCHat.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Sj06YKL-.js">
 </head>
@@ -96,7 +96,7 @@
 			
 			<script>
 				{
-					__sveltekit_147foz7 = {
+					__sveltekit_1sinnwf = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -105,8 +105,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BAMWE86m.js"),
-						import("./_app/immutable/entry/app.CTiwhXq2.js")
+						import("./_app/immutable/entry/start.R-cnhXdM.js"),
+						import("./_app/immutable/entry/app.DeGAMEXL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
