--- a/404.html
+++ b/404.html
@@ -68,27 +68,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.R-cnhXdM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DolK5Jl_.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.Dw_DQhde.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.BhbiQTaa.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DeGAMEXL.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.FO89wGvZ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.XzuQFLOL.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CkaEhIMg.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.BfJ3LYB2.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.BEtKO2Sl.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CcXGdi4q.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.YJDmhkb0.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1sinnwf = {
+					__sveltekit_1mgmha1 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.R-cnhXdM.js"),
-						import("/_app/immutable/entry/app.DeGAMEXL.js")
+						import("/_app/immutable/entry/start.XzuQFLOL.js"),
+						import("/_app/immutable/entry/app.CcXGdi4q.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
