--- a/404.html
+++ b/404.html
@@ -68,11 +68,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.XzuQFLOL.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CkaEhIMg.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.C0V1TJcx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DjQrWHa7.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.BfJ3LYB2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BEtKO2Sl.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CcXGdi4q.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.B2NUTXg6.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.YJDmhkb0.js">
 </head>
 
@@ -80,15 +80,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1mgmha1 = {
+					__sveltekit_o40d1z = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.XzuQFLOL.js"),
-						import("/_app/immutable/entry/app.CcXGdi4q.js")
+						import("/_app/immutable/entry/start.C0V1TJcx.js"),
+						import("/_app/immutable/entry/app.B2NUTXg6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
