--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 		<link href="./_app/immutable/assets/0.DsTTDJuz.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DVS6dNU8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.XzuQFLOL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CkaEhIMg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C0V1TJcx.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DjQrWHa7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.BfJ3LYB2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BEtKO2Sl.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CcXGdi4q.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B2NUTXg6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.YJDmhkb0.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.ezi6tI5-.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.w6xV9FdD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/language.BlHTdNhY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Toaster.BxpWue-S.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BceBdVaq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D6h1GOfM.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.8yAD4a1P.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DqzexEuA.js">
 </head>
@@ -97,7 +97,7 @@
 			
 			<script>
 				{
-					__sveltekit_1mgmha1 = {
+					__sveltekit_o40d1z = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -106,8 +106,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.XzuQFLOL.js"),
-						import("./_app/immutable/entry/app.CcXGdi4q.js")
+						import("./_app/immutable/entry/start.C0V1TJcx.js"),
+						import("./_app/immutable/entry/app.B2NUTXg6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
