--- a/404.html
+++ b/404.html
@@ -68,27 +68,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CKXJBM-6.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.D_5p5NTd.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BFrdnmEN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.9Rvhg0QY.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.BfJ3LYB2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BEtKO2Sl.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.C1sFJgbF.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.YJDmhkb0.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DBAsCz_Y.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.CCqIm1Tj.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_4osipc = {
+					__sveltekit_1euomsc = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CKXJBM-6.js"),
-						import("/_app/immutable/entry/app.C1sFJgbF.js")
+						import("/_app/immutable/entry/start.BFrdnmEN.js"),
+						import("/_app/immutable/entry/app.DBAsCz_Y.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
