--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
 		<link href="./_app/immutable/assets/0.DsTTDJuz.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Toaster.DKF17Rty.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DVS6dNU8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CKXJBM-6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D_5p5NTd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BFrdnmEN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.9Rvhg0QY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.BfJ3LYB2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BEtKO2Sl.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C1sFJgbF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.YJDmhkb0.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BL_dPzko.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/language.BlHTdNhY.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Toaster.BxpWue-S.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BDA2L1Lu.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.8yAD4a1P.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.DqzexEuA.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DBAsCz_Y.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CCqIm1Tj.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.27b-UFuY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/language.CvieEbqB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Toaster.IbM61TUk.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Bi_T9n3q.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.C0mddaM6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.DRVzUvvG.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
@@ -97,7 +97,7 @@
 			
 			<script>
 				{
-					__sveltekit_4osipc = {
+					__sveltekit_1euomsc = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -106,8 +106,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CKXJBM-6.js"),
-						import("./_app/immutable/entry/app.C1sFJgbF.js")
+						import("./_app/immutable/entry/start.BFrdnmEN.js"),
+						import("./_app/immutable/entry/app.DBAsCz_Y.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
