--- a/404.html
+++ b/404.html
@@ -68,11 +68,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.C920d7ec.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.sY8Stix1.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DDtVYoq_.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CaIaM2V9.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.BfJ3LYB2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BEtKO2Sl.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DIkIOd5f.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CGF-SqFt.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.CCqIm1Tj.js">
 </head>
 
@@ -80,15 +80,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_ivt6kx = {
+					__sveltekit_1q20ljr = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.C920d7ec.js"),
-						import("/_app/immutable/entry/app.DIkIOd5f.js")
+						import("/_app/immutable/entry/start.DDtVYoq_.js"),
+						import("/_app/immutable/entry/app.CGF-SqFt.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
