--- a/404.html
+++ b/404.html
@@ -68,27 +68,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DDtVYoq_.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CaIaM2V9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.BfJ3LYB2.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.BEtKO2Sl.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CGF-SqFt.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.CCqIm1Tj.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DWIdhDSe.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.zN-SCUQr.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.C6sVxLJ7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.Cwx6Ud2C.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.EYqBwAIE.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BIgnNmyd.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1q20ljr = {
+					__sveltekit_ox8vmc = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DDtVYoq_.js"),
-						import("/_app/immutable/entry/app.CGF-SqFt.js")
+						import("/_app/immutable/entry/start.DWIdhDSe.js"),
+						import("/_app/immutable/entry/app.EYqBwAIE.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
