--- a/404.html
+++ b/404.html
@@ -68,11 +68,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Ckgmbqce.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BPt3G8le.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.C7Bw9abX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CO_bb_ZE.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.C6sVxLJ7.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.Cwx6Ud2C.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CpM_wibM.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Cx_aYeJW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BIgnNmyd.js">
 </head>
 
@@ -80,15 +80,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_18pbofy = {
+					__sveltekit_139wexh = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Ckgmbqce.js"),
-						import("/_app/immutable/entry/app.CpM_wibM.js")
+						import("/_app/immutable/entry/start.C7Bw9abX.js"),
+						import("/_app/immutable/entry/app.Cx_aYeJW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
