--- a/404.html
+++ b/404.html
@@ -68,27 +68,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.C7Bw9abX.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CO_bb_ZE.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.C6sVxLJ7.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.Cwx6Ud2C.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Cx_aYeJW.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BIgnNmyd.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BxQ84dSg.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Bd2JjxrC.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CVovrycA.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.COLohEMP.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DavhpNXd.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Dh8ONG2l.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_139wexh = {
+					__sveltekit_ox3cgk = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.C7Bw9abX.js"),
-						import("/_app/immutable/entry/app.Cx_aYeJW.js")
+						import("/_app/immutable/entry/start.BxQ84dSg.js"),
+						import("/_app/immutable/entry/app.DavhpNXd.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
