--- a/404.html
+++ b/404.html
@@ -68,27 +68,27 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BxQ84dSg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Bd2JjxrC.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.CVovrycA.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.COLohEMP.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DavhpNXd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Dh8ONG2l.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DyLuzI0Q.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CFfL024U.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DgkU9qJm.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CtCNMdbi.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Dy-UpJXx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bc9YyEIu.js">
 </head>
 
 <body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_ox3cgk = {
+					__sveltekit_52lvzm = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BxQ84dSg.js"),
-						import("/_app/immutable/entry/app.DavhpNXd.js")
+						import("/_app/immutable/entry/start.DyLuzI0Q.js"),
+						import("/_app/immutable/entry/app.Dy-UpJXx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
